--- a/index.html
+++ b/index.html
@@ -6,59 +6,65 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>WebStudio</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="./css/styles.css">
+
 </head>
 
 <body>
   <header>
-    <div>
+    <div class="header">
+      <a href="" class="logo link-ns">Web<span class="header-modifier-logo">Studio</span></a>
       <nav>
-        <a href="">Web<span>Studio</span></a>
-        <ul>
-          <li><a href="./index.html">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+        <ul class="nav lists-ns">
+          <li><a href="./index.html" class="nav-item  link-ns">Студия</a></li>
+          <li><a href="./portfolio.html" class="nav-item  link-ns">Портфолио</a></li>
+          <li><a href="" class="nav-item  link-ns">Контакты</a></li>
         </ul>
       </nav>
 
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="nav-inner lists-ns">
+        <li><a href="mailto:info@devstudio.com" class="nav-inner-item  link-ns">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111" class="nav-inner-item  link-ns">+38 096 111 11 11</a></li>
       </ul>
     </div>
   </header>
 
   <main>
-    <section>
-      <h1>Эффективные решения для вашего бизнеса</h1>
-      <button type="button">Заказать услугу</button>
+    <section class="hero">
+      <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+      <button type="button" class="hero-button">Заказать услугу</button>
     </section>
     <section>
-      <h2>Особенности</h2>
+      <h2 class="lists title-nd">Особенности</h2>
       <ul>
-        <li>
-          <h3>Внимание к деталям</h3>
-          <p>
+        <li class="lists-ns">
+          <h3 class="lists-title">Внимание к деталям</h3>
+          <p class="lists-paragraph">
             Идейные соображения, а также начало повседневной работы по формированию позиции.
           </p>
         </li>
 
-        <li>
-          <h3>Пунктуальность</h3>
-          <p>
+        <li class="lists-ns">
+          <h3 class="lists-title">Пунктуальность</h3>
+          <p class="lists-paragraph">
             Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
           </p>
         </li>
 
-        <li>
-          <h3>Планирование</h3>
-          <p>
+        <li class="lists-ns">
+          <h3 class="lists-title">Планирование</h3>
+          <p class="lists-paragraph">
             Равным образом консультация с широким активом в значительной степени обуславливает.
           </p>
         </li>
 
-        <li>
-          <h3>Современные технологии</h3>
-          <p>
+        <li class="lists-ns">
+          <h3 class="lists-title">Современные технологии</h3>
+          <p class="lists-paragraph">
             Значимость этих проблем настолько очевидна, что реализация плановых заданий.
           </p>
         </li>
@@ -66,65 +72,70 @@
     </section>
 
     <section>
-      <h2>Чем мы занимаемся</h2>
+      <h2 class="title">Чем мы занимаемся</h2>
       <ul>
-        <li>
+        <li class="lists-ns">
           <a href=""><img src="./images/box-one.jpg" alt="человек пишет разметку сайта" width="370" /></a>
         </li>
-        <li>
+
+        <li class="lists-ns">
           <a href=""><img src="./images/box-two.jpg" alt="человек адаптирует сайт под мобильные устройства"
               width="370" /></a>
         </li>
-        <li>
+
+        <li class="lists-ns">
           <a href=""><img src="./images/box-three.jpg" alt="человек создает дизайн сайта" width="370" /></a>
         </li>
       </ul>
     </section>
 
-    <section>
-      <h2>Наша команда</h2>
-      <ul>
+    <section class="team">
+      <h2 class="title team-title">Наша команда</h2>
+      <ul class="lists-ns">
         <li>
           <img src="./images/igor-demyanenko.jpg" alt="фото Игоря Демьяненко" width="270" />
-          <h3>Игорь Демьяненко</h3>
-          <p lang="en">Product Designer</p>
+          <h3 class="team-item title">Игорь Демьяненко</h3>
+          <p lang="en" class="team-paragraph">Product Designer</p>
         </li>
 
         <li>
           <img src="./images/olga-repina.jpg" alt="фото Ольги Репиной" width="270" />
-          <h3>Ольга Репина</h3>
-          <p lang="en">Frontend Developer</p>
+          <h3 class="team-item title">Ольга Репина</h3>
+          <p lang="en" class="team-paragraph">Frontend Developer</p>
         </li>
 
         <li>
           <img src="./images/nikolai-tarasov.jpg" alt="фото Николая Тарасова" width="270" />
-          <h3>Николай Тарасов</h3>
-          <p lang="en">Marketing</p>
+          <h3 class="team-item title">Николай Тарасов</h3>
+          <p lang="en" class="team-paragraph">Marketing</p>
         </li>
 
         <li>
           <img src="./images/mikhail-ermakov.jpg" alt="фото Михаила Ермакова" width="270" />
-          <h3>Михаил Ермаков</h3>
-          <p lang="en">UI Designer</p>
+          <h3 class="team-item title">Михаил Ермаков</h3>
+          <p lang="en" class="team-paragraph">UI Designer</p>
         </li>
       </ul>
     </section>
 
-    <footer>
+    <footer class="footer">
       <div>
-        <a href="">Web<span>Studio</span></a>
+        <a href="" class="logo link-ns">Web<span class="footer-modifier-logo">Studio</span></a>
         <address>
-          <ul>
+          <ul class="footer-list lists-ns">
             <li>
-              <a href="https://goo.gl/maps/eR7fZNgkEcZo2k5L9" target="_blank">г. Киев, пр-т Леси Украинки, 26</a>
+              <a href="https://goo.gl/maps/eR7fZNgkEcZo2k5L9" target="_blank" class="footer-addres link-ns">г. Киев,
+                пр-т
+                Леси
+                Украинки, 26</a>
             </li>
 
             <li>
-              <a href="mailto:info@example.com">info@example.com</a>
+              <a href="mailto:info@example.com" class="footer-mail link-ns">info@example.com</a>
             </li>
 
             <li>
-              <a href="tel:+380991111111">+38 099 111 11 11</a>
+              <a href="tel:+380991111111" class="footer-tel link-ns">+38 099 111 11 11</a>
             </li>
           </ul>
         </address>
